# 2021-PP-Final

./: .gitignore  README.md  run.sh
CUDA/: kernel.cu  target
CUDA/src/: Makefile  image.cu  image.hpp  main.cpp
OpenCL/src/: CMakeLists.txt  Makefile  OpenCL  filter.cpp  filter.hpp  image.cpp  image.hpp  kernel.cl  opencl.cpp
OpenMP/src/: CMakeLists.txt  Makefile  OpenMP  filter.cpp  filter.hpp  image.cpp  image.hpp  openmp.cpp
pthread/src/: Makefile  filter.cpp  filter.hpp  image.cpp  image.hpp  main.cpp
serial/src/: filter.hpp  image.cpp  main.cpp  target
